[package]
name = "benchmark-example"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# be sure to clone the repository first
mongodb = { path = "../mongo-rust-driver" }
tokio = { version = "1", features = ["full"] }
futures = { version = "0.3", default-features = false }

[dev-dependencies]
criterion = { version = "0.3.5", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "find"
harness = false